--- a/gb/22/2/19/n13589295.md
+++ b/gb/22/2/19/n13589295.md
@@ -1,20 +1,20 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/zhhqsq3413/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/zhhqsq3413/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/zhhqsq3413/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/zhhqsq3413/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/zhhqsq3413/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cufnqn370/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cufnqn370/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cufnqn370/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cufnqn370/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cufnqn370/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>音乐人：神韵艺术总监是天才 伟大杰出</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2022/02/id13589306-2202182340241886-600x400.jpg" />
 <h6>2022年2月18日晚，在美国华盛顿DC肯尼迪艺术中心歌剧院，华盛顿DC音乐人Ted Gustin（左）与外甥Jacob Babal及外甥的女友Ella Beutner一同观看了神韵纽约艺术团的精彩演出。（林南宇／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2022年02月19日讯】（大纪元记者林南宇美国华盛顿特区报导）华盛顿DC<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md#1">音乐</a>人Ted Gustin得知<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a><ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md#1">音乐</a>作曲全部是出自神韵艺术总监D.F.先生一人之手时，他赞佩道：“他是天才！他伟大杰出，富有智慧。”</p>
-<p>Gustin是一名管风琴家、钢琴家和合唱团总监，有45年的演奏经验。2月18日晚，他与外甥Jacob Babal及外甥的女友Ella Beutner一同观看了<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团在美国华盛顿DC<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E8%82%AF%E5%B0%BC%E8%BF%AA%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">肯尼迪艺术中心歌剧院</a>（The Kennedy Center Opera House）的第五场演出。</p>
+	<p>【大纪元2022年02月19日讯】（大纪元记者林南宇美国华盛顿特区报导）华盛顿DC<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md#1">音乐</a>人Ted Gustin得知<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a><ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E9%9F%B3%E4%B9%90.md#1">音乐</a>作曲全部是出自神韵艺术总监D.F.先生一人之手时，他赞佩道：“他是天才！他伟大杰出，富有智慧。”</p>
+<p>Gustin是一名管风琴家、钢琴家和合唱团总监，有45年的演奏经验。2月18日晚，他与外甥Jacob Babal及外甥的女友Ella Beutner一同观看了<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E7%A5%9E%E9%9F%B5.md#1">神韵</a>纽约艺术团在美国华盛顿DC<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E8%82%AF%E5%B0%BC%E8%BF%AA%E8%89%BA%E6%9C%AF%E4%B8%AD%E5%BF%83%E6%AD%8C%E5%89%A7%E9%99%A2.md#1">肯尼迪艺术中心歌剧院</a>（The Kennedy Center Opera House）的第五场演出。</p>
 <p>神韵纽约艺术团乐团以中西方传统乐器合璧，在现场伴奏的音乐与旋律带给观众耳目一新的感受。有丰富的音乐专业知识的Gustin不仅陶醉其中，也感到神韵音乐“作曲的难度相当高”。</p>
 <p>讲到聆听神韵音乐的感受时，他说：“首先一方面，是智慧。这是充满智慧的东西，我认为他们都是非常具有聪明才智的人，才可以做到这些。我非常尊重他们的智慧和一切。”</p>
 <p>Gustin对神韵艺术总监D.F.先生一人为所有音乐作曲，感到非常敬佩。他说，“我是一位音乐家，我知道这有多么难。”</p>
 <p>“他（D.F.先生）伟大非凡，他是天才！”他说，“他是位专业的作曲家，卓越杰出！”</p>
-<p>另外，他也对神韵的音乐家和<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E6%AD%8C%E5%94%B1%E5%AE%B6.md#1">歌唱家</a>赞赏不已。“他们（音乐家们）把音乐演绎得很美。”</p>
+<p>另外，他也对神韵的音乐家和<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E6%AD%8C%E5%94%B1%E5%AE%B6.md#1">歌唱家</a>赞赏不已。“他们（音乐家们）把音乐演绎得很美。”</p>
 <p>Gustin说，“他们很棒，很赞！钢琴家很出色，所有的演奏家们都很棒，竖琴师也是超棒！”</p>
-<p>他还赞叹道：“乐团的指挥令人惊奇，<ahref="https://github.com/zhhqsq3413/djy/blob/master/gb/tag/%E6%AD%8C%E5%94%B1%E5%AE%B6.md#1">歌唱家</a>也非常出色，钢琴家更是了不起！”</p>
+<p>他还赞叹道：“乐团的指挥令人惊奇，<ahref="https://github.com/cufnqn370/djy/blob/master/gb/tag/%E6%AD%8C%E5%94%B1%E5%AE%B6.md#1">歌唱家</a>也非常出色，钢琴家更是了不起！”</p>
 <p>Beutner说，演出有着“令人惊叹的视觉效果和美丽的编舞，我真的很喜欢所有的色彩和音乐，令人称奇。”</p>
 <p>演出最让Beutner印象深刻的是“神性”的部分。她说，“你可以真正感受到中国的文化和历史。我从演出中真正感受到了这一点。”</p>
 <p>Babal则说，“我认为他们涵盖了广泛的主题，有些非常严肃。我真的很喜欢这一切。”</p>
@@ -25,35 +25,41 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/18/n13586529.md#1">华盛顿演出满场 主流赞神韵精湛、永恒</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/18/n13586570.md#1">领略五千年文化之旅 首席工程师赞神韵完美</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/18/n13586797.md#1">生物学家观神韵：世人相信同一个创世主</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/18/n13586855.md#1">高级企业视频架构师：神韵演出启迪人心</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/18/n13586529.md#1">华盛顿演出满场 主流赞神韵精湛、永恒</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/18/n13586570.md#1">领略五千年文化之旅 首席工程师赞神韵完美</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/18/n13586797.md#1">生物学家观神韵：世人相信同一个创世主</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/18/n13586855.md#1">高级企业视频架构师：神韵演出启迪人心</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank">警卫目击活摘器官</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/31/n11757068.md#1" target="_blank">王友群：面对“八国联军”清军为何兵败如山倒</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/14/10/30/n4283873.md#1" target="_blank">方林达：法轮功参与政治了吗？</a></li>
+<li><a href="https://github.com/upjkzu3674/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/9/n10377672.md#1" target="_blank">林辉：民国三位大师眼中的共产主义很可怕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/28/n11285652.md#1" target="_blank">澳洲各级政要褒奖祝贺法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/20/n11959031.md#1">传习近平亲自下令严办任志强 红二代分裂</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/20/n11959416.md#1">众星遭陆“限籍令”点名 台湾艺人揭中共套路</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/13/n11938995.md#1">他在另外空间看见了故人 明白了侵吞善款的代价</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
-<li><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/20/3/13/n11938981.md#1">“千金报德”英雄本色</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/4/n13555508.md#1">【百年真相】涉嫌谋反 中共上将张阳上吊自杀</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/8/n13563590.md#1">【百年真相】两封匿名信吓昏江青 酿特大政治案</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/10/n13567902.md#1">元宵节俗传承 汤圆为何叫“元宵”？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/11/n13570720.md#1">男子车祸“死亡”濒死期间见到慈悲的神</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/3/n13553481.md#1">【未解之谜】神奇的石头</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/17/n13584751.md#1">【微视频 】谁在炒作俄罗斯乌克兰之战？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/17/n13585096.md#1">【财商天下】九成百亿私募亏损 A股赌性难改</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/17/n13584843.md#1">【拍案惊奇】小花梅与丰县浮尸 江苏男成血奴</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/15/n13579538.md#1">带妻子吃情人节大餐 杜汶泽发文讽中共</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/15/n13579087.md#1">美报告戳穿中共假相 分析：制约中共一招就行</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/16/n13580817.md#1">中共报复不灵 立陶宛出口额创十年新高</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/15/n13579538.md#1">带妻子吃情人节大餐 杜汶泽发文讽中共</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/15/n13579321.md#1">章子怡包饺子动作娴熟 所用馅料被指太奢侈</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/16/n13582307.md#1">59岁王杰近况曝光 歌迷惊呼“判若两人”</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/16/n13580570.md#1">余苑绮大肠再现阴影 李亚萍泪曝：最近都在化疗</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/16/n13580225.md#1">录取率不到两成 台艺人陈德烈考取乙级厨师</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/15/n13579523.md#1">难缠茶渍污垢清光光 这些奇妙方法一定要知道</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/13/n13574357.md#1">你可能对Omicron免疫？这些人感冒后竟增保护力</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/14/n13576016.md#1">28年研究：每天食用橄榄油 降心血管病死亡风险</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/15/n13577377.md#1">芝麻汤圆含糖、热量都第一 哪种汤圆热量低？</a></li>
+<li><a href="https://github.com/cufnqn370/djy/blob/master/gb/22/2/15/n13577415.md#1">【健康1+1】《柳叶刀》：Omicron大流行将要结束</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/zhhqsq3413/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/zhhqsq3413/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/2/19/n13589295.htm">音乐人：神韵艺术总监是天才 伟大杰出</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cufnqn370/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/22/2/19/n13589295.htm">音乐人：神韵艺术总监是天才 伟大杰出</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/zhhqsq3413/djy/blob/master/gb/22/2/19/n13589295.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/zhhqsq3413/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/zhhqsq3413/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/zhhqsq3413/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/zhhqsq3413/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cufnqn370/djy/blob/master/gb/22/2/19/n13589295.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cufnqn370/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cufnqn370/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cufnqn370/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
